--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
+# READ THE README BEFORE TOUCHING THESE PLS - https://github.com/RooRay/GoogleFormsToImgur?tab=readme-ov-file#accounts-setup
+
 IMGUR_CLIENT_ID = 'CLIENT-ID-HERE' # https://api.imgur.com/oauth2/addclient - Use OAuth2 without callback
-IMGUR_CLIENT_SECRET = 'CLIENT-SECRET-HERE' # Secret from above
+IMGUR_CLIENT_SECRET = 'CLIENT-SECRET-HERE' # Client Secret from above process
 
 # Examples below assume you are using Windows
-SERVICE_ACCOUNT_FILE = 'C:/Users/Administrator/Documents/data/account.json'  # Enable Google Forms API on Google Cloud and create a service account with access, then add its email address to all forms you want to import
+SERVICE_ACCOUNT_FILE = 'C:/Users/Administrator/Documents/data/account.json'  # Refer to README.md for setup instructions
 #OUTPUT_DIR = 'C:/Users/Administrator/Documents/data'  # Where to temporarily save pie charts locally before uploading them to Imgur, uses ./output if not specified
