--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint google-api-python-client google-auth matplotlib numpy requests
+        pip install pylint google-api-python-client google-auth matplotlib numpy requests python-dotenv
     - name: Analysing the code with pylint
       run: |
         pylint -E $(git ls-files '*.py')
